src/css/hnc_information.scss
#hncInformationContainer {
  hr {
    background: rgb(255, 255, 255);
    height: 2px;
  }
  h1 {
    font-family: "Montserrat", sans-serif;
    font-weight: 700;

    color: rgb(195, 196, 255);
    span {
      color: rgb(195, 255, 215);
      -webkit-animation-name: prizes;
      -webkit-animation-duration: 2s;
      -webkit-animation-timing-function: ease-in-out;
      animation-name: prizes;
      animation-duration: 2s;
      animation-timing-function: ease-in-out;
      animation-iteration-count: infinite;
      -moz-animation-iteration-count: infinite;
      -webkit-animation-iteration-count: infinite;
      -o-animation-iteration-count: infinite;
      transition: 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
    }
    @keyframes prizes {
      0% {
        filter: drop-shadow(0px 0px 0px transparent);
      }
      50% {
        filter: drop-shadow(0px 0px 5px #57ffb9);
      }
      100% {
        filter: drop-shadow(0px 0px 0px transparent);
      }
    }
    @-webkit-keyframes prizes {
      0% {
        -webkit-filter: drop-shadow(0px 0px 0px transparent);
      }
      50% {
        -webkit-filter: drop-shadow(0px 0px 5px #57ffb9);
      }
      100% {
        -webkit-filter: drop-shadow(0px 0px 0px transparent);
      }
    }
  }
  .scrollIcon {
    color: rgb(195, 255, 215);
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    letter-spacing: 4px;
  }
  #hncCardContainer {
    overflow: hidden;
  }
  /*  #hncCardContainer {
    overflow-x: hidden;
    height: 550px;

    mask-image: linear-gradient(transparent 1%, black, transparent 100%);

    -webkit-mask-image: -webkit-linear-gradient(
      transparent 1%,
      black,
      transparent 100%
    );
  } */

  .card {
    background: rgb(255, 255, 255);
    background: linear-gradient(
      135deg,
      rgba(107, 107, 107, 0.3) 0%,
      rgba(0, 0, 0, 0.2) 0%
    );

    border: 2px solid rgba(255, 255, 255, 0.2);

    border-radius: 20px;
  }
  h3 {
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    color: rgb(195, 196, 255);
  }
  p {
    font-family: "Montserrat", sans-serif;
    font-size: 1.2rem;
    margin-bottom: 5px;
    color: rgb(87, 255, 185);
  }
  @media (max-width: 768px) {
    p {
      font-size: 0.9em;
    }
    /*     #hncCardContainer {
      height: 500px;
    } */
  }
}
/* #hncCardContainer::-webkit-scrollbar {
  -webkit-appearance: visible;
  width: 2px;
  height: 0px;
  box-shadow: inset 2px 2px 2px rgb(195, 255, 215);
  background-color: rgb(195, 196, 255);
}
#hncCardContainer::-webkit-scrollbar-thumb {
  -webkit-appearance: visible;
  background-color: rgb(87, 255, 185);
  cursor: grab;
} */

